--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href = "css/reset.css" />
+    <link href= "css/styles.css" />
   </head>
   <body>
     <header>
@@ -15,10 +17,13 @@
       <section id="photo-template">
         <h2></h2>
         <img src="" alt="">
+        <figcaption></figcaption>
         <p></p>
       </section>
     </main>
     <footer>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <script src = "js/app.js"></script>
       &copy; 2018 Code Fellows
     </footer>
   </body>
