--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <section id="photo-template">
         <h2></h2>
-        <img src="" alt="">
+        <img src="" alt="" class="">
         <figcaption></figcaption>
         <p></p>
       </section>
